# hmmer-api

./: .dockerignore  .gitignore  Dockerfile  manage.py  pyproject.toml
.github/workflows/: build.yml  release.yml
architecture/: api.py  apps.py  models.py  schema.py  tasks.py
architecture/migrations/: 0001_squashed_0004_architecture_database_architecture_sequence_index.py  0005_alter_architecture_database.py  0006_remove_architecture_id_architecture_pk.py  0007_remove_architecture_architectur_accessi_ac05b2_idx_and_more.py  0008_remove_architecture_architectur_accessi_f7e6b8_hash_and_more.py  0009_alter_architecture_graphics.py
download/: api.py  models.py  tasks.py  views.py
download/migrations/: 0001_initial.py  0002_alter_filejob_job.py  0003_filejob_filters.py
hmmerapi/: api.py  asgi.py  celery.py  config.py  settings.py  testrunner.py  urls.py  wsgi.py
phmmer/: api.py  apps.py  models.py  schema.py  tasks.py
phmmer/migrations/: 0001_initial.py
result/: api.py  models.py
result/tests/: __init__.py  result.py
search/: admin.py  api.py  client.py  models.py  schema.py  tasks.py  tests.py
search/migrations/: 0001_initial.py  0002_alter_hmmerjob_result_json_alter_hmmerjob_result_pkl.py  0002_hmmerjob_threshold.py  0003_hmmerjob_taxonomy_distribution_task_and_more.py  0004_hmmerjob_with_architecture_hmmerjob_with_taxonomy.py  0005_hmmerjob_architecture_task.py  0006_hmmerjob_taxonomy_distribution_graph_task.py  0007_rename_sequence_hmmerjob_input.py  0008_alter_hmmerjob_mx.py  0009_hmmerjob_annotation_task.py  0010_database.py  0011_alter_database_release_date.py  0012_alter_database_release_date.py  0013_alter_database_release_date_alter_hmmerjob_database.py  0014_alter_database_release_date.py  0014_hmmerjob_parent_alter_database_release_date.py  0015_alter_database_release_date.py  0015_alter_database_release_date_alter_hmmerjob_input.py  0016_alter_database_release_date.py  0016_database_order.py  0017_hmmerjob_convergence_stats.py  0017_hmmerjob_date_submitted.py  0018_hmmerjob_number_of_hits.py  0019_merge_20250603_0900.py  0020_remove_hmmerjob_convergence_stats_hmmerjob_exclude_and_more.py  0021_hmmerjob_auto_run.py  0022_hmmerjob_calculated_input_hmmerjob_input_type.py  0031_database_status.py  (+10 more)
taxonomy/: api.py  models.py  tasks.py  tests.py
utils/: functions.py  validators.py
(+43 files in other folders)
